Time: 35 ms (82.58%), Space: 63.3 MB (5.21%) - LeetHub